tooling/nargo_cli/tests/snapshots/execution_success/comptime_println/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() {
    let x: i32 = 3;
    println(x);
    ()
}
